# test-bazel-swift-atomics

./: .gitignore  BUILD  MODULE.bazel  Package.swift  README.md
.github/workflows/: build.yml
Sources/: BUILD  main.swift
