bazel_dep(
    name = "rules_swift",
    version = "1.18.0",
    repo_name = "build_bazel_rules_swift",
)
git_override(
    module_name = "rules_swift",
    commit = "b65d9ad5a1bd2dad5d4afa50fd3f5eb2ec54a39c",
    remote = "https://github.com/bazelbuild/rules_swift",
)

bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift_package_manager", version = "0.34.1")
git_override(
    module_name = "rules_swift_package_manager",
    commit = "275107a35a69233ed7e37ab7d3cba999cda58604",
    remote = "https://github.com/cgrindel/rules_swift_package_manager",
)

bazel_dep(name = "gazelle", version = "0.36.0")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swiftpkg_swift_atomics",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "swift_atomics",
    build_file = "//third_party/swift-atomics:BUILD",
    sha256 = "33d9f4fbaeddee4bda3af2be126791ee8acf3d3c24a2244457641a20d39aec12",
    strip_prefix = "swift-atomics-1.2.0",
    url = "https://github.com/apple/swift-atomics/archive/refs/tags/1.2.0.tar.gz",
)
