bazel_dep(
    name = "rules_swift",
    version = "3.5.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "apple_support", version = "2.5.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_swift_package_manager", version = "1.13.0")
bazel_dep(name = "gazelle", version = "0.48.0")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_swift_atomics",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "swift_atomics",
    build_file = "//third_party/swift-atomics:BUILD",
    sha256 = "556761d16bae75278bb2c64d8ab510b98d133d0809ca06a2ba32fac96fae916e",
    strip_prefix = "swift-atomics-1.3.0",
    url = "https://github.com/apple/swift-atomics/archive/refs/tags/1.3.0.tar.gz",
)
